# ChatViaLan

./: .gitignore  Cargo.toml  LICENSE  README  README.md  history.json  metadata_error.txt  users.json
.github/workflows/: rust.yml
docs/: api.md  architecture.md  commands.md  frontend.md  index.md  overview.md
docs/modules/: auth.md  client.md  commands.md  helpers.md  main.md  metrics.md  rate_limit.md  room.md  types.md  typing.md  upload.md
src/: auth.rs  client.rs  commands.rs  helpers.rs  main.rs  metrics.rs  rate_limit.rs  room.rs  types.rs  typing.rs  upload.rs
static/: app.js  index.html  manifest.json  styles.css  sw.js
static/css/: base.css  chat.css  classic.css  messages.css  midnight.css  mobile-fix.css  msn.css  polish.css  responsive.css  sidebar.css
static/js/: config.js  dom.js  events.js  features.js  main.js  messages.js  reactions.js  state.js  utils.js  websocket.js
uploads/: 0173b82a-747a-42b3-bacf-9ec908d2c7fa_main.rs  44b01b4f-2fab-413a-b0fc-d2c822d07e63_HA-4.docx  665f60b0-0cc4-4f33-bacc-9b1f815a72d2_ALM-3_Mind_Map.docx  README.md  e523af38-6c79-41d8-bc0a-218d9418646f_HA-3.docx
