[package]
name = "rust-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
# utilities
warp = "0.3"
tokio = { version = "1.34", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"

bytes = "1"
