[package]
name = "rust-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
# utilities
warp = "0.3"
tokio = { version = "1.34", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1", features = ["v4"] }
regex = "1"
bcrypt = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"

bytes = "1"

